Updates to the swagger documentation [WIP]
